# slideshow

./: .gitignore  Cargo.toml  build.rs
setup/: details.txt  sway.config  sway.service  sway.timer
src/: main.rs  shader.wgsl
