[package]
name = "slideshow"
version = "0.1.0"
edition = "2021"

[dependencies]
mimalloc = "0.1.43"
# bytemuck = "1.21.0"
# pollster = "0.4.0"

winit = { version = "0.30.8", default-features = false, features = [
    "wayland",
    "rwh_06",
] }
glutin = { version = "0.32.2", default-features = false }
glutin-winit = { version = "0.5.0", default-features = false, features = [
    "wayland",
    "egl",
] }
raw-window-handle = "0.6.2"
drm = "0.14.1"

# wgpu = { version = "24.0.1", default-features = false, features = ["wgsl"] }

image = { version = "0.25.5", default-features = false, features = ["jpeg"] }
reqwest = { version = "0.12.12", default-features = false, features = [
    "blocking",
    "rustls-tls",
] }
zip = "2.2.2"

[build-dependencies]
gl_generator = "0.14"
cfg_aliases = "0.2.1"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"

[profile.dev]
opt-level = 1
