[package]
name = "slideshow"
version = "0.1.0"
edition = "2021"

[dependencies]
mimalloc = "0.1.43"

winit = { version = "0.30.8", default-features = false, features = [
    "wayland",
    "rwh_06",
] }
glutin = { version = "0.32.2", default-features = false }
glutin-winit = { version = "0.5.0", default-features = false, features = [
    "wayland",
    "egl",
] }
raw-window-handle = "0.6.2"

image = { version = "0.25.5", default-features = false, features = ["jpeg"] }
reqwest = { version = "0.12.12", default-features = false, features = [
    "blocking",
    "rustls-tls",
] }
zip = { version = "2.2.2", default-features = false }

[build-dependencies]
gl_generator = "0.14"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"

[profile.dev]
opt-level = 1
