[package]
name = "slideshow"
version = "0.1.0"
edition = "2021"

[dependencies]
mimalloc = "0.1.46"
anyhow = "1.0.97"

winit = { version = "0.30.9", default-features = false }
glutin = { version = "0.32.2", default-features = false }
glutin-winit = { version = "0.5.0", default-features = false, features = [
    "wayland",
    "egl",
] }
raw-window-handle = "0.6.2"

image = { version = "0.25.6", default-features = false, features = ["bmp"] }
ureq = "3.0.10"
pdfium-render = { version = "0.8.29", default-features = false, features = [
    "pdfium_latest",
    "thread_safe",
] }

[build-dependencies]
gl_generator = "0.14.0"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"

[profile.dev]
opt-level = 1
